style.css
/* =========================
   RESET
========================= */


*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

/* =========================
   ROOT COLORS
========================= */

@font-face {
    font-family: Urdu;
    src: url("fonts/Jameel\ Noori\ Nastaleeq\ Kasheeda.ttf") format("truetype");
}
 

/* @font-face {
    font-family: Urdu;
    src: url("fonts/jf.ttf") format("truetype");
 } */

:root{

    --bg:#0f0b08;
    --card:#1b1510;
    --gold:#d7b57a;
    --light:#f8f3ea;
    --text:#eadfce;
    --border:#3d2d1d;

}

/* =========================
   BODY
========================= */

body{

    /* font-family:'Noto Nastaliq Urdu', serif;  */

    font-family: Urdu;

    background:var(--bg);

    color:var(--text);

    overflow-x:hidden;

    position:relative;

}

/* =========================
   STARS BACKGROUND
========================= */

#stars{

    position:fixed;

    top:0;
    left:0;

    width:100%;
    height:100%;

    z-index:-3;

}

/* =========================
   GLOW
========================= */

.glow{

    position:fixed;

    inset:0;

    z-index:-2;

    background:
    radial-gradient(circle at top right, rgba(215,181,122,.12), transparent 35%),
    radial-gradient(circle at bottom left, rgba(255,255,255,.05), transparent 30%);

}

/* =========================
   HEADER
========================= */

.topbar{

    width:100%;

    padding:18px 30px;

    display:flex;

    justify-content:space-between;

    align-items:center;

    position:sticky;

    top:0;

    z-index:100;

    backdrop-filter:blur(12px);

    background:rgba(15,11,8,.7);

    border-bottom:1px solid var(--border);

}

.logo{

    color:var(--gold);

    font-size:28px;

    font-weight:bold;

}

.header-btn{

    border:none;

    background:linear-gradient(145deg,#d7b57a,#b89254);

    color:#000;

    padding:8px 8px;

    border-radius:12px;

    cursor:pointer;

    font-size:20px;

    font-family: Urdu;

    font-weight: bolder;

}

/* =========================
   CONTAINER
========================= */

.container{

    width:100%;

    max-width:1200px;

    margin:auto;

    padding:25px;

}

/* =========================
   HERO
========================= */

.hero{

    background:linear-gradient(145deg,#1f1711,#120d09);

    border:1px solid var(--border);

    border-radius:35px;

    padding:50px;

    position:relative;

    overflow:hidden;

    box-shadow:0 15px 40px rgba(0,0,0,.4);

}

/* PATTERN */

.hero::before{

    content:"";

    position:absolute;

    inset:0;

    background:url("arabesque.png");

    opacity: 0.5;

}

/* BISMILLAH */

.bismillah{

    text-align:center;

    color:var(--gold);

    font-size:85px;

    margin-bottom:10px;

}

/* TITLE */

.hero-title{

    text-align:center;

    color:var(--gold);

    font-size:50px;

    margin-bottom:35px;

}

/* TEXT */

.hero-text{

    font-size:24px;

    line-height:2.8;

    color:var(--light);

}

.hero-text p{

    margin-bottom:22px;

}

/* NOTICE */

.notice{

    margin-top:40px;

    padding:30px;

    border-radius:24px;

    border:1px solid var(--border);

    background:rgba(255,255,255,.03);

}

.notice h2{

    color:var(--gold);

    font-size:34px;

    margin-bottom:20px;

}

.notice p{

    font-size:22px;

    line-height:2.4;

    margin-bottom:15px;

}

/* =========================
   SLIDER SECTION
========================= */

.slider-section{

    margin-top:60px;

}

/* TOP */

.slider-top{

    display:flex;

    justify-content:center;

    align-items:center;

    gap:20px;

    margin-bottom:30px;

}

.slider-title{

    color:var(--gold);

    font-size:52px;

    text-align: center;

}

/* BUTTONS */

.nav-btn{

    width:60px;

    height:60px;

    border:none;

    border-radius:50%;

    background:linear-gradient(145deg,#d7b57a,#b8904f);

    color:#000;

    font-size:28px;

    cursor:pointer;

    transition:.3s;

    box-shadow:0 8px 25px rgba(0,0,0,.4);

}

.nav-btn:hover{

    transform:scale(1.1);

}

/* CARD */

.slider-card{

    max-width:950px;

    margin:auto;

    background:linear-gradient(145deg,#1d1712,#120d09);

    border:1px solid var(--border);

    border-radius:35px;

    padding:45px;

    position:relative;

    overflow:hidden;

    box-shadow:0 15px 45px rgba(0,0,0,.45);

   
    width:100%;

    overflow:visible

}

/* CARD PATTERN */

.slider-card::before{

    content:"";

    position:absolute;

    inset:0;

    background:url("arabesque.png");

    opacity: 0.5;
    
}

/* MINI BISMILLAH */

.mini-bismillah{

    text-align:center;

    color:var(--gold);

    font-size:60px;

    margin-bottom:15px;

}

/* COUNTER */

.hadith-count{

    text-align:center;

    color:#cdb28a;

    font-size:22px;

    margin-bottom:30px;

}

/* ARABIC */

#arabicText{

    font-family:'Amiri', serif;

    font-size:42px;

    line-height:2.2;

    text-align:center;

    color:#fff;

    margin-bottom:25px;

}

/* =========================
   RESPONSIVE ARABIC TEXT
========================= */

.arabicText-1{

    color:var(--gold);

    font-family:'Amiri', serif;

    font-size:42px;

    line-height:2.2;

    text-align:center;

    margin-bottom:25px;

    word-wrap:break-word;

}

.arabicText-2{

    color:var(--gold);

    font-family:'Amiri', serif;

    font-size:22px;

    text-align:center;

    margin-bottom:0;

    word-wrap:break-word;

}

/* TABLET */

@media(max-width:768px){

    .arabicText-1{

        font-size:30px;

        line-height:1.9;

        padding:0 10px;

    }

    .arabicText-2{

        font-size:18px;

        line-height:1.8;

        padding:0 10px;

    }

}

/* MOBILE */

@media(max-width:480px){

    .arabicText-1{

        font-size:24px;

        line-height:1.8;

    }

    .arabicText-2{

        font-size:15px;

        line-height:1.7;

    }

}

/* REFERENCE */

#referenceText{

    text-align:center;

    color:var(--gold);

    font-size:22px;

    margin-bottom:25px;

}

/* URDU */

#urduText{

    font-size:28px;

    line-height:2.6;

    color:#f5ead7;

    text-align: center;

}

/* FOOTER */

.footer{

    margin-top:70px;

    padding:40px 20px;

    border-top:1px solid var(--border);

    text-align:center;

    color:#b8a48c;

    font-size:22px;

}

/* =========================
   MOBILE
========================= */
@media(max-width:992px){

    .container{

        padding:20px;

    }

}
@media(max-width:768px){

    .hero{

        padding:30px 20px;

    }

    .bismillah{

        font-size:55px;

    }

    .hero-title{

        font-size:32px;

    }

    .hero-text{

        font-size:18px;

        line-height:2.4;

    }

    .notice h2{

        font-size:26px;

    }

    .notice p{

        font-size:18px;

    }

    .slider-title{

        font-size:28px;

    }

    .nav-btn{

        width:50px;

        height:50px;

        font-size:22px;

    }

    .slider-card{

        padding:28px 18px;

    }

    #arabicText{

        font-size:28px;

    }

    #urduText{

        font-size:19px;

        line-height:2.3;

    }

}

